--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description"content="Web site created using create-react-app" />
     <div id="identify" hidden>1</div>
+      <script src="/src/index.js" ></script>
     <title>React App</title>
   </head>
 
