--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       <div class="dot-wave__dot"></div>
     </div>
   </div>
-
+Inspired by limitless, too much juice
     <div id="ytea">
       <input id="input" type="number" /> &nbsp;&nbsp;
       <button id="SaveAnime">Save</button>
