fixing wrong stuff.

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description"content="Web site created using create-react-app" />
     <div id="identify" hidden>1</div>
-<link href="/src/index.css" rel="stylesheet" >
-    <title>React App</title>
+    <div id="progress-loader" >
+      <div id="progress"></div>
+    </div>
+
+    <title>Anime List</title>
   </head>
 
   <body>
@@ -20,7 +23,7 @@
       <div class="dot-wave__dot"></div>
     </div>
   </div>
-Inspired by limitless, too much juice
+
     <div id="ytea">
       <input id="input" type="number" /> &nbsp;&nbsp;
       <button id="SaveAnime">Save</button>
