--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <div class="dot-wave__dot"></div>
     </div>
   </div>
-
+<input id="searchInput" type="text"> <span><button>Search</button></span>
     <div id="ytea">
       <input id="input" type="number" /> &nbsp;&nbsp;
       <button id="SaveAnime">Save</button>
