--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description"content="Web site created using create-react-app" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <div id="identify" hidden>1</div>
-    <div id="progress-loader" >
+    <div id="progress-loader">
       <div id="progress"></div>
     </div>
 
@@ -15,24 +18,38 @@
   </head>
 
   <body>
-    <div id="loader">
-    <div id="dot-wave">
-      <div class="dot-wave__dot"></div>
-      <div class="dot-wave__dot"></div>
-      <div class="dot-wave__dot"></div>
-      <div class="dot-wave__dot"></div>
+    <div id="loader"></div>
+   <button id="menu">≡</button>
+    <div id="clout">
+      <input id="searchInput" type="text" placeholder="search..." />
+    
+      <svg
+        id="svg"
+        fill="#000000"
+        width="20px"
+        height="20px"
+        viewBox="0 0 1920 1920"
+        xmlns="http://www.w3.org/2000/svg">
+        <path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z" fill-rule="evenodd">
+        </path>
+      </svg>
     </div>
-  </div>
-<input id="searchInput" type="text"> <span><button>Search</button></span>
+    
+    <!-- Html to add a new button -->
     <div id="ytea">
-      <input id="input" type="number" /> &nbsp;&nbsp;
+      <input id="input" type="number" placeholder="ID"/> &nbsp;&nbsp;
       <button id="SaveAnime">Save</button>
     </div>
 
+    <!-- Html for the react to render elements -->
     <div id="stem">
-      <p id="Characters"></p>
-      <p id="Season"></p>
+      <div id="Inform"></div>
+      <div id="Characters"></div>
+      <button id="three">⋮</button>
+      <div id="Season"></div>
     </div>
+
     <div id="root"></div>
+
   </body>
 </html>
