--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -12,32 +12,34 @@
     <title>Anime List</title>
   </head>
 
-  <body >
-
-  </body><div id="identify" hidden>1</div>
-  <div id="progress-loader">
-    <div id="progress"></div>
-  </div>
+  <body>
+    <div id="identify" hidden>1</div>
+    <div id="progress-loader">
+      <div id="progress"></div>
+    </div>
 
     <div id="loader"></div>
-   <button id="menu">≡</button>
+    <button id="menu">≡</button>
     <div id="clout">
       <input id="searchInput" type="text" placeholder="search..." />
-    
+
       <svg
         id="svg"
         fill="#000000"
         width="20px"
         height="20px"
         viewBox="0 0 1920 1920"
-        xmlns="http://www.w3.org/2000/svg">
-        <path d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z" fill-rule="evenodd">
-        </path>
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          d="M790.588 1468.235c-373.722 0-677.647-303.924-677.647-677.647 0-373.722 303.925-677.647 677.647-677.647 373.723 0 677.647 303.925 677.647 677.647 0 373.723-303.924 677.647-677.647 677.647Zm596.781-160.715c120.396-138.692 193.807-319.285 193.807-516.932C1581.176 354.748 1226.428 0 790.588 0S0 354.748 0 790.588s354.748 790.588 790.588 790.588c197.647 0 378.24-73.411 516.932-193.807l516.028 516.142 79.963-79.963-516.142-516.028Z"
+          fill-rule="evenodd"
+        ></path>
       </svg>
     </div>
     <!-- Html to add a new button -->
     <div id="ytea">
-      <input id="input" type="number" placeholder="ID"/> &nbsp;&nbsp;
+      <input id="input" type="number" placeholder="ID" /> &nbsp;&nbsp;
       <button id="SaveAnime">Save</button>
     </div>
 
@@ -52,6 +54,14 @@
 
     <div id="root"></div>
 
-    <script src="/src/Service/serv.js"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("./sw.js")
+          .then((reg) => console.log("registered", reg))
+          .catch((err) => console.log("something went wrong", err));
+      }
+      console.log("cheese");
+    </script>
   </body>
 </html>
