--- a/public/Stats/stat.html
+++ b/public/Stats/stat.html
@@ -24,7 +24,7 @@
       const groupedChartOptions = {
         type: "bar",
         data: {
-          labels: ["Episodes", "Seasons", "Anime"],
+          labels: ["Anime", "Season", "Epsisodes"],
           datasets: [
             {
               data: [ani, sea, epi],
