again fixing thee errors

--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,12 @@
   </head>
 
   <body>
+New Me Has Been Cached
 
     <div id="topup">
       <button id="menu">⮀</button>
       <button id="stat" >S</button>
     </div>
-   
 
     <div id="identify" hidden>1</div>
     
@@ -71,7 +71,7 @@
       }
       document.getElementById("stat").addEventListener("click", () => {
             console.log("stat");
-            window.location.href = "https://acid1738.github.io/Dubstep/Stats/stat.html";
+            window.location.href = "/Stats/stat.html";
           });
     </script>
     </script>
