Hopefully finally fix

--- a/public/index.html
+++ b/public/index.html
@@ -13,21 +13,16 @@
   </head>
 
   <body>
-New Me Has Been Cached
-
+     <!-- top level button -->
     <div id="topup">
       <button id="menu">⮀</button>
       <button id="stat" >S</button>
     </div>
 
+    <!-- hidden -->
     <div id="identify" hidden>1</div>
     
-    <div id="progress-loader">
-      <div id="progress"></div>
-    </div>
-
-    <div id="loader"></div>
-    
+    <!-- search button -->
     <div id="clout">
       <input id="searchInput" type="text" placeholder="search..." />
 
@@ -45,7 +40,8 @@ New Me Has Been Cached
         ></path>
       </svg>
     </div>
-    <!-- Html to add a new button -->
+
+    <!-- Html to add a new anime -->
     <div id="ytea">
       <input id="input" type="number" placeholder="ID" /> &nbsp;&nbsp;
       <button id="SaveAnime">Save</button>
@@ -71,7 +67,7 @@ New Me Has Been Cached
       }
       document.getElementById("stat").addEventListener("click", () => {
             console.log("stat");
-            window.location.href = "/Stats/stat.html";
+            window.location.href = "Dubstep/Stats/stat.html";
           });
     </script>
     </script>
