--- a/Stats/stat.html
+++ b/Stats/stat.html
@@ -77,7 +77,7 @@
     <div id="text">
       <p>You have watched <span id="episode"></span> episodes</p>
       <p>You have watched <span id="season"></span> seasons</p>
-      <p>You have completed <span id="anime"></span> anime</p>
+      <p>You have completed <span id="anime"></span> out of <span id="total"></span> anime</p>
       <p>You watched <span id="timespan"></span> of anime</p>
     </div>
 
