--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
   </head>
 
   <body>
+    <!-- loader -->
+    <div id="lds-ellipsis"><div></div><div></div><div></div></div>
+
     <!-- top level button -->
     <div id="topup">
       <button id="menu">ADD ANIME</button>
